<?xml version="1.0"?>
<package>
  <name>dt_teleop_twist_keyboard</name>
  <version>0.6.2</version>
  <description>Generic keyboard teleop for twist robots.</description>


  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
